--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -18,7 +18,7 @@
        
 		<header>
 		<ul>
-		<img src="https://www.code-brew.com/wp-content/uploads/2018/10/Webp.net-compress-image-1.jpg" height="500" width="1250">
+		<img src="https://www.freepik.com/premium-vector/charity-donations-cartoon-tiny-people-donate-box-full-clothes-toys-coins-piggy-bank-white_7647069.htm" height="500" width="1250">
 		<br>
 		<br>	
 		<li><a href="forever.html">Forever</a></li>
