--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -1,43 +1,37 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+header li {
+ 	list-style: none;
 
-    <link rel="stylesheet" href="stylesheet.css">
-	
-	<title>login page</title>
-	 
-</head>
-<body>       
-                <h1>We Are One</h1>
-       
-		<header>
-		<ul>
-		<img src="https://www.freepik.com/premium-vector/charity-donations-cartoon-tiny-people-donate-box-full-clothes-toys-coins-piggy-bank-white_7647069.htm" height="500" width="1250">
-		<br>
-		<br>	
-		<li><a href="forever.html">Forever</a></li>
-		<li><a href="https://www.giveindia.org/?utm_source=Sem&utm_campaign=DCNad3&utm_medium=Google&utm_term=DCNad3&utm_content=ad3&gclid=Cj0KCQiAmfmABhCHARIsACwPRAAxoQupgAgWOM770EwTdNz6OREqClqWWIi57SfsUNieqBGaIjcylS8aAm7JEALw_wcB" target="_blank">Orphans</a></li>
-		<li><a href="https://www.chhanv.org/" target="_blank">Acid attack survivers</a></li>
-		<li><a href="https://www.giveindia.org/cancer-care?https://www.giveindia.org/?utm_source=SEM&utm_campaign=brandindiadsa&utm_medium=Google&utm_term=Campaign&utm_content=donate&gclid=Cj0KCQiAmfmABhCHARIsACwPRACLNmt1LYdvxlhxzxM8tuAvA4EpevQLG-ZnH6kaguHbq3LEkWiuhoAaAptjEALw_wcB " target="_blank">Cancer patients</a></li>
-        <li><a href="https://yourstory.com/socialstory/2020/05/sakshi-ngo-child-sexual-abuse-awareness-campaign" target="_blank">Child Abuse</a></li>
-        <li><a href="https://www.thechetna.org/index.php" target="_blank">Child Labour</a></li>
-        <li><a href="https://www.giveindia.org/program/Support-living-expenses-of-children-in-a-shelter-home?utm_source=Blog&utm_campaign=TopEduNGOs&utm_medium=Blog&utm_term=ProgLink&utm_content=MAD" target="_blank">Right to educaton </a></li>
-        <li><a href="https://www.giveindia.org/program/Help-an-abuse-victim-fight-for-justice?utm_source=Blog&utm_campaign=CTAbutton&utm_medium=Legal%20Aid&utm_term=textlink4&utm_content=ActionAid">Domestic violence</a></li>
+ }
 
-		</ul>
-		<br>
-		<br>
-		<br>
-		<section><strong>We look forward to connecting with you!</strong></section>
-	</header>
-<br>
-<div class="text-center">&copy; Vanshika Bohra 2021</div>
-<br>
-	</body>
-	</html>
+ body {
+ 	background-color: grey;
+ }
+ 
+ a:link, a:visited {
+ 	text-decoration: none;
+ 	background-color: lightblue;
+ 	border: 1px solid black;
+ 	color: black;
+ 	display: block;
+ 	width: 1250px;
+ 	text-align: center;
+ 	margin-bottom: 5px;
+ 	height: 30px;
+ }
+ a:hover, a:active {
+ 	background-color: pink;
+ 	color: purple;
+ }
+ h1 {
+ 	text-align: center;
+ 	background-color: black;
+ 	color: white;
+ 	font-style: bold italic;
+ 	font-size: 70px;
+ 	height: 120px;
+ 	
+}
+            
+ section {
+ 	text-align: center;
+ }
